--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+
+    "gen:entities": "ts-node tools/generate-entities.ts",
+    "gen:organize": "ts-node tools/organize-entities.ts",
+    "gen:modules": "ts-node tools/smart-from-entities.ts --with-auth --with-swagger",
+    "gen:all": "npm run gen:entities && npm run gen:organize && npm run gen:modules"
+
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -51,11 +57,18 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
+    "change-case": "^5.4.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
+    "fs-extra": "^11.3.2",
+    "glob": "^11.0.3",
     "globals": "^16.0.0",
+    "inquirer": "^12.10.0",
     "jest": "^30.0.0",
+    "minimist": "^1.2.8",
+    "param-case": "^3.0.4",
+    "pascal-case": "^3.1.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -63,7 +76,8 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typeorm-model-generator": "^0.4.6",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
